--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "formik": "^2.4.8",
+    "i18next": "^25.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
